# magnet

./: Cargo.toml  LICENSE  README.md
magnet/: Cargo.toml  README.md
magnet/examples/: finite_main_tic.rs  forever_main_tic.rs
magnet/src/: lib.rs
magnet_gui/: Cargo.toml  README.md  build.rs  workspace.code-workspace
magnet_gui/src/: main.rs
magnet_gui/ui/: config_options.slint  switch.slint  top_level.slint
