[package]
name = "motor_gui"

build = "build.rs"
resolver = "2"
version = "0.1.0"
authors = ["James B <fpga@atlantixeng.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "0.3.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.8"
magnet = {path = "../magnet", version = "0.1.0"}

[build-dependencies]
slint-build = "0.3.0"


